# tokenizer

./: Cargo.toml  LICENSE  README.md  README.rst  icon.json  icons.json  rustfmt.toml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  privat.rs  privatestructs.rs  tests.rs  token.rs
src/collectors/: comment.rs  fstring.rs  indent.rs  mod.rs  name.rs  number.rs  operator.rs  string.rs
